# ai-mini-hack

./: .gitignore
MINIHACK-AI-FOUNDRY/: .env.template  README.md  requirements.txt
MINIHACK-AI-FOUNDRY/.devcontainer/: devcontainer.json  post-create.sh
MINIHACK-AI-FOUNDRY/deploy/: cleanup.sh  deploy.sh  generate-env.sh  main.bicep
MINIHACK-AI-FOUNDRY/docs/: azure-ai-foundry-introduction.md  devcontainer-setup.md  iac-deployment.md
MINIHACK-AI-FOUNDRY/notebooks/: 1-authentication.ipynb  2-environment_setup.ipynb  3-quick-start.ipynb  4-simple-ai-agent.ipynb  5-rag.ipynb
MINIHACK-AUTOLABELLING/: .envtemplate  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Solution.md  pyproject.toml
MINIHACK-AUTOLABELLING/.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
MINIHACK-AUTOLABELLING/config/: openai_foundry_local.yaml  openai_yolo_local.yaml  phi_acv_blobstorage.yaml
MINIHACK-AUTOLABELLING/src/: main.py
MINIHACK-AUTOLABELLING/src/core/: __init__.py  annotate_image.py  evaluate_results.py  run_manager.py  visualize_results.py
MINIHACK-AUTOLABELLING/src/models/object_detection/: __init__.py  azure_computer_vision_detector.py  azure_foundry_detector.py  object_detector.py  yolo_detector.py
MINIHACK-AUTOLABELLING/src/models/scene_classification/: __init__.py  openai_classifier.py  phi_classifier.py  scene_classifier.py
MINIHACK-AUTOLABELLING/src/models/scene_classification/prompts/v1/: system_message.md
MINIHACK-AUTOLABELLING/src/storage/: __init__.py  azure_blob_storage.py  base_storage.py  local_storage.py
MINIHACK-AUTOLABELLING/src/utils/: logging_config.py
MINIHACK-DATAOPS/: .env.example  .gitignore  README.md
MINIHACK-DATAOPS/.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
MINIHACK-DATAOPS/data/: LICENSE.txt  training_dataset.jsonl
MINIHACK-DATAOPS/scripts/: 1-download_bdd100k.sh  2-download_bdd100k_labels.sh  3-unzip_bdd100k.sh  4-extract_per_image_labels.py  5-filter_qualified_data.py  azure_databricks_service_setup.sh  run_all_data_processing.sh  zip_files.sh
MINIHACK-HVE/: .env  .env.example  README.md  gen_video.py  requirements.txt
MINIHACK-HVE/.github/: copilot-instructions.md  copilot-instructions_template.md
MINIHACK-HVE/app/: main.py
MINIHACK-HVE/doc/: api-reference.md  developer-guide.md  swagger.html  user-manual.md  video-generation-workflow.md
MINIHACK-HVE/tests/: test_api_video.py  test_api_video_integration.py
MINIHACK-HVE/userstories/: userstory-1-technology-stack-adr.md  userstory-2-workflow-design.md  userstory-3-wireframe.md  userstory-4-core-implementation.md  userstory-5-ui-implementation.md  userstory-6-documentation.md
MINIHACK-HVE/userstories_template/: userstory-1-technology-stack-adr.md  userstory-2-workflow-design.md  userstory-3-wireframe.md  userstory-4-core-implementation.md  userstory-5-ui-implementation.md  userstory-6-documentation.md
MINIHACK-MCP/: .envtemplate  .gitignore  README.md  requirements.txt
MINIHACK-MCP/.devcontainer/: Dockerfile  devcontainer.json
MINIHACK-MCP/labs/: 01_connecting_to_an_mcp_server.md  02_mcp_as_sk_plugin.ipynb  03_sk_agents_as_mcp_server.md
MINIHACK-MCP/servers/: menu_agent_server.py  (+1 more)
MINIHACK-SEMANTIC-KERNEL/: .envtemplate  .gitignore  README.md  requirements.txt
(+123 files in other folders)
